# First-Example-of-FastAPI

./: README.md  main.py  pyproject.toml  run.bat  ‎PARCEL_TRACKING_API.md
flasx/: main.py
flasx/routers/models/: __init__.py  customer_model.py  item_model.py  parcel_model.py  receiver_model.py  sender_model.py
flasx/routers/v1/: __init__.py  customer_router.py  delivery_staff_router.py  hello_router.py  item_router.py  items.py  parcel_router.py  receiver.py  receiver_router.py  receivers.py  sender_router.py  station_router.py  vehicle_router.py
flasx/schemas/: item_schema.py  parcel_schema.py  receiver.schema.py  sender_schema.py
flasx/tests/: test_hello.py
