[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"
[project]
name = "example-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "ธนภูมิ บูบ่าสอ",email = "neymar90130@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "fastapi-cli (>=0.0.7,<0.0.8)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
